--- a/desafios/cordel/estilo/style.css
+++ b/desafios/cordel/estilo/style.css
@@ -54,6 +54,9 @@ section{
     font-family: var(--fonte3);
     font-size: 2.5vw;
 }
+section > p{
+    padding-bottom: 2em;
+}
 
 section.normal {
     background-color:  white;
@@ -63,12 +66,25 @@ section.normal {
 section.imagem {
     background-color: rgb(87, 73, 100);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
+    text-shadow: 1px 1px 0px black;
     display: inline-block;
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.363);
+    background-color: rgba(0, 0, 0, 0.418);
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+background-image: url('../imagens/background002.jpg');
 }
 
 footer {
